# Project_9_NLP_Team2

./: .gitignore  README.md  app.py  main.py  pyproject.toml
data/processed/: test.csv  train.csv  train_augmented.csv  val.csv  youtoxic_comments_cleaned.csv  youtoxic_preprocessed.csv
data/processed_rn/: dataset_rn_entrenamiento.csv  youtoxic_rn_limpio.csv
models/: logistic_regression_model.pkl  tfidf_vectorizer.pkl  tfidf_vectorizer_IsToxic_V04.pkl
notebooks/: 00_eda_V02.ipynb  00_eda_V04.ipynb  01_preprocesamiento_V02.ipynb  02_data_augmentation_V02.ipynb  EDA_Toxic_Comments_v03.ipynb  train_val_test_sets.pkl  vectorizer.pkl
notebooks/V_01/: 0.1-eda-exploracion-inicial.ipynb  1.0-preprocesado.ipynb  2.0-entrenamiento-modelo.ipynb
notebooks/V_02/: 00_eda_V02.ipynb  01_preprocesamiento_V02.ipynb  02_split_augmentation_V02.ipynb  03_entrenamiento_baseline_V02.ipynb  04_optimizacion_optuna_V02.ipynb  05_Preprocesamiento_DistilBERT_V02.ipynb
notebooks/V_03/: Model_Training_v03.ipynb  Preprocessing_NLP_v03.ipynb  Split_Augmentation_v03.ipynb
notebooks/V_04/: 00_eda_V04.ipynb  01_preprocesamiento_V04.ipynb  02_entrenamiento_baseline_V04.ipynb
notebooks/data/processed/V_04/: youtoxic_preprocessed_IsToxic.csv
