[project]
name = "project-canciones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "catboost>=1.2.10",
    "datasets>=4.8.5",
    "emoji>=2.15.0",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "mlflow>=3.12.0",
    "nlpaug>=1.1.11",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
    "wordcloud>=1.9.6",
    "xgboost>=3.2.0",
]
